--- a/six-tribute.html
+++ b/six-tribute.html
@@ -11,7 +11,7 @@
        <div><p id="text">Is a black cat with yellow eyes, it's very cute and loves to <u>cuddle all the time.</u></p></div>
        <figure id="img-div">
         <div>
-        <img id="image" src="six-img.JPG">
+        <img type="image/png" src="six-img.JPG" sizes="32X32" rel="icon">
         </div>
         <figcaption id="img-caption">
             This cat has come to the family 3 years ago when i and my girlfriend found it along side with her brothers, all of them were very small and she was the first one to say hello to my GF and she says if we can keep this one, of course i cannot say no.
